[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Bricket.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BricketGrid.gd" type="Script" id=3]
[ext_resource path="res://Asset/OpenSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/bg.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ball.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightWall" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightWall"]
polygon = PoolVector2Array( 1080, 164, 1080, 1680, 1096, 1680, 1096, 164 )

[node name="LeftWall" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftWall"]
polygon = PoolVector2Array( 0, 164, 0, 1680, -16, 1680, -16, 164 )

[node name="Ceil" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ceil"]
polygon = PoolVector2Array( 0, 180, 0, 164, 1080, 164, 1080, 180 )

[node name="Ground" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
polygon = PoolVector2Array( -16, 1680, -16, 1696, 1096, 1696, 1096, 1680 )

[node name="NewSpawn" type="Position2D" parent="."]
visible = false
position = Vector2( 230, 1677 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="NewSpawn"]
texture = ExtResource( 6 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 230, 1678 )
__meta__ = {
"_edit_lock_": true
}

[node name="FirstLine" type="Line2D" parent="Spawn"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.823529, 0.823529, 0.823529, 1 )
antialiased = true

[node name="EndLine" type="Line2D" parent="Spawn"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.823529, 0.823529, 0.823529, 1 )
antialiased = true

[node name="FirstRay" type="RayCast2D" parent="Spawn"]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="EndRay" type="RayCast2D" parent="Spawn"]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="BallCount" type="Label" parent="Spawn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -45.0
margin_right = 19.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 1 )
text = "x30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" type="Sprite" parent="Spawn"]
texture = ExtResource( 6 )

[node name="BricketGridContainer" type="Node" parent="."]

[node name="BricketGrid" type="Node2D" parent="BricketGridContainer"]
position = Vector2( 0, 180 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Tween" type="Tween" parent="."]

[node name="Bricket" parent="." instance=ExtResource( 1 )]
position = Vector2( 180, 360 )
bricket_color = Color( 0, 0.956863, 0.105882, 1 )

[node name="Bricket2" parent="." instance=ExtResource( 1 )]
position = Vector2( 540, 480 )
health = 45
bricket_color = Color( 0, 0.0313726, 0.505882, 1 )

[node name="Bricket3" parent="." instance=ExtResource( 1 )]
position = Vector2( 900, 480 )
health = 40
bricket_type = "Triangle"
bricket_color = Color( 0.992157, 0.231373, 0.0588235, 1 )

[node name="Bricket4" parent="." instance=ExtResource( 1 )]
position = Vector2( 900, 1080 )
health = 35
bricket_type = "Triangle"
bricket_color = Color( 0.729412, 0.529412, 0, 1 )

[node name="Bricket5" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 1080 )
health = 50
bricket_color = Color( 0.968627, 1, 0, 1 )
